@@ -53,7 +53,7 @@ public:
     void setVariable(const String&, const String&, ExceptionCode&);
 
     unsigned length() const;
-    const String& item(unsigned index);
+    String item(unsigned index);
 
     CSSRule* parentRule();
 
