@@ -1,3 +1,13 @@
+2008-06-19  David Hyatt  <hyatt@apple.com>
+
+        Fix out of bounds bug in CSSVariablesDeclaration's item() method.
+
+        Reviewed by Sam, Darin
+
+        * css/CSSVariablesDeclaration.cpp:
+        (WebCore::CSSVariablesDeclaration::item):
+        * css/CSSVariablesDeclaration.h:
+
 2008-06-19  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Darin
